--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,4 +16,20 @@
             android:padding="16dp"
             android:textSize="20sp" />
     </ScrollView>
+    <ProgressBar
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:id="@+id/pb_loading_data"
+        android:layout_gravity="center"
+        android:visibility="invisible"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Error"
+        android:textSize="20sp"
+        android:padding="16dp"
+        android:visibility="invisible"
+        android:id="@+id/error_message_tv"
+        />
 </FrameLayout>
