--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Error"
+        android:text="@string/error_message"
         android:textSize="20sp"
         android:padding="16dp"
         android:visibility="invisible"
