--- a/app/src/main/res/menu/detail.xml
+++ b/app/src/main/res/menu/detail.xml
@@ -6,4 +6,8 @@
         android:title="Share"
         android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
         app:showAsAction="always"/>
+    <item
+        android:id="@+id/show_setting"
+        android:title="@string/action_settings"
+        ></item>
 </menu>
