--- a/app/src/main/res/menu/forecast.xml
+++ b/app/src/main/res/menu/forecast.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:title="@string/refresh"
+        android:title="@string/action_refresh"
         android:id="@+id/action_refresh"></item>
     <item
         android:id="@+id/show_map"
         android:title="Map"
+        ></item>
+    <item
+        android:id="@+id/show_setting"
+        android:title="@string/action_settings"
         ></item>
 </menu>
